# 6s_nosql

./: Dockerfile  README.md  build.sh  build_run.sh  pyproject.toml  run.sh
nosql/: __main__.py
nosql/exceptions/: __init__.py
nosql/redis_connector/: __init__.py  redis_connector.py
nosql/strategies/: __init__.py  send_text.py  send_text_console.py  send_text_file.py  send_text_kafka.py
nosql/utils/: __init__.py
resources/: text.txt
